--- a/style1.css
+++ b/style1.css
@@ -157,4 +157,10 @@ img {
     object-fit: fill;
 }
 (이미지의 비율을 유지하지 않고 부모요소를 채움)
-*/
+
+10.
+div.pink, div.blue {
+    width: 50px;
+    height: 50px;
+    float: right; (floar = 띄우기)
+}
